# taur

./: Cargo.toml  readme.md
src/: main.rs  search.rs  state.rs  ui.rs
